php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27822 is_resource() returns true for closed resource handles
Submitted: 2004-04-01 03:43 UTC Modified: 2004-04-15 22:36 UTC
From: mike@php.net Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 4CVS, 5CVS OS: Irrelevant
Private report: No CVE-ID: None
 [2004-04-01 03:43 UTC] mike@php.net
Description:
------------
is_resource() returns true even if the resource is already closed

Reproduce code:
---------------
php -r '$f=fopen("test","w");fclose($f);var_dump(is_resource($f));'

Expected result:
----------------
bool(false)

Actual result:
--------------
bool(true)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-04-01 03:47 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 10:00:01 2026 UTC