- Fixed bug #27822 (is_resource() returns TRUE for closed resources)